tests/baselines/reference/override7.errors.txt
tests/cases/conformance/override/override7.ts(13,14): error TS1030: 'override' modifier already seen.


==== tests/cases/conformance/override/override7.ts (1 errors) ====
    class B {
        p1: number = 1;
        p2: number = 2;
    }
    
    class D extends B{
        declare p1: number
    
        override declare p2: number
    
        override static sp: number;
    
        override override oop: number;
                 ~~~~~~~~
!!! error TS1030: 'override' modifier already seen.
    
        public override pp: number;
        override public op: number;
    
        override constructor () {
            super();
        }
    }
    